# stock-review

./: .gitignore  Justfile  README.md  SKILL.md  pyproject.toml
.claude/skills/stock-review/: SKILL.md
.claude/skills/stock-review/config/: cookies.txt.example
.claude/skills/stock-review/references/: analysis-rubric.md  review-prompt.md  up-list.yaml
.claude/skills/stock-review/scripts/: discover.py  state.py  transcribe.py
assets/: report-template.md
docs/superpowers/plans/: 2026-04-24-stock-review-workflow.md  2026-04-25-skill-repo-restructure.md
docs/superpowers/specs/: 2026-04-24-stock-review-workflow-design.md  2026-04-25-skill-repo-restructure-design.md
references/: analysis-rubric.md  funasr-hotwords.txt  review-prompt.md  up-list.yaml  workflow-detail.md
scripts/: discover.py  fetch.py  state.py  transcribe.py
tests/: conftest.py  test_discover.py  test_fetch.py  test_state.py  test_transcribe.py
