[project]
name = "stock-review"
version = "0.1.0"
description = "Stock market replay analyzer driven by Claude Code"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pysrt>=1.1",
    "python-dateutil>=2.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".claude/skills/stock-review"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
